# sdu-equery

./: Cargo.toml  daily-usage-chart.typ  history.csv  render-latest.typ
.github/workflows/: query.yml
src/: lib.rs
